fixed non-overflowing links in /sides, added single side wrapper div, added back button for single side

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -410,7 +410,9 @@ body {
 }
 
 #single-side-container {
-    height: 100vh;
+    height: 100vh !important;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .sauce-name {
@@ -518,7 +520,8 @@ body {
 /* STYLES FOR INDIVIDUAL SIDES PAGE */
 #side-container {
     margin-bottom: 5%;
-    height: 100vh;
+    height: 100vh !important;
+    overflow-y: scroll;
 }
 
 #side-title {
@@ -573,6 +576,15 @@ body {
     text-decoration: none;
 }
 
+/* Styles for back button on single side (menu/side/id) */
+#single-side-back {
+    text-align: center;
+    margin: auto;
+    color: red;
+    font-weight: bold;
+    margin-bottom: 6%;
+    font-size: 175%;
+}
 
 /* Media Queries for Phones */
 @media screen and (max-width: 480px) {
@@ -690,7 +702,8 @@ body {
     }
 
     #side-title {
-        margin-bottom: 5%
+        margin-bottom: 5%;
+        font-size: 400%;
     }
 
     #side-items-container {
